syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "commons.proto";

package chat;

option java_package = "com.talking.grpc.chat";
option java_multiple_files = true;

message SendMessageRequest {
    int64 toUserId = 1;
    string message = 2;
}

message ReceiveMessageResponse {
    ChatMessage chatMessage = 1;
    common.User fromUser = 2;
    common.User toUser = 3;
}

message AllChatMessageRequest {
    int64 minMessageId = 1;
}

message AllChatMessageResponse {
    repeated common.User users = 1;
    repeated ChatMessage messages = 2;
}

message ChatMessage {
    int64 id = 1;
    int64 fromUserId = 2;
    int64 toUserId = 3;
    string message = 4;
    google.protobuf.Timestamp date = 5;
}

service ChatService {
    // メッセージ/送信
    rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);

    // メッセージ/受信
    rpc ReceiveMessage(google.protobuf.Empty) returns (stream ReceiveMessageResponse);

    // チャット/すべてのメッセージを取得:
    //   想定される呼び出しタイミング: アプリ起動時、ログイン時に呼び出す。
    //   メッセージと相手のユーザー情報を取得して、端末のdbを更新する。
    rpc GetAllMessages(AllChatMessageRequest) returns (AllChatMessageResponse);
}
